<resources>
    <string name="app_name">Мои любимые места</string>
    <string name="hint_email">Email-адрес</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_repeat_password">Повторите пароль</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Регистрация</string>
    <string name="btn_to_register">Зарегистрировать</string>
    <string name="btn_logout">Выйти</string>
    <string name="error_field_empty">Поле должно быть заполнено</string>
    <string name="error_email_not_registered">Неверный логин</string>
    <string name="error_email_invalid">Поле email-адрес может содержать только символ \'@\', \'.\', латинские буквы, цыфры</string>
    <string name="error_short_email">Слишком короткий логин. Минимум 6 символов</string>
    <string name="error_long_email">Слишком длинный логин. Максимум 129 символов</string>
    <string name="error_email_exist">Такой email-адрес уже существует</string>
    <string name="error_short_password">Слишком короткий пароль. Минимум 4 символа</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_password_mismatch">Пароли не совпадают</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="loading_users_error">Не удалось загрузить пользователей</string>
    <string name="checked_users_cleared">Выделенные пользователи удалены</string>
    <string name="user_marked_toDelete">Пользователь помечен на удаление</string>
    <string name="user_unchecked">Пользователь снят с удаления</string>
    <string name="save_user_error">Ошибка сохранения пользователя. Попробуйте ещё</string>
    <string name="btn_ban">Забанить пользователя</string>
    <string name="btn_data">Посмотреть регистрационные данные</string>
    <string name="btn_back_to_users">Вернуться к списку пользователей</string>
    <string name="admin_user_data">Данные пользователя</string>
    <string name="first_name">Имя</string>
    <string name="placeholder">Пусто</string>
    <string name="patronimic">Отчество</string>
    <string name="last_name">Фамилия</string>
    <string name="nickname">Nickname</string>
    <string name="user_phone">Телефон</string>
    <string name="ban_time">Забанить на срок, дней</string>
    <string name="ban_reason">Причина</string>
    <string name="btn_update_user">Сохранить изменения</string>
    <string name="btn_back_to_menu">Вернуться в меню</string>
    <string name="banned_time">Забанен до</string>
    <string name="banned_reason">Забанен по причине</string>
    <string name="user_banned">Пользователь забанен</string>
    <string name="user_data_title">Ваши регистрационные данные</string>
    <string name="user_updated">Данные сохранены успешно</string>
    <string name="EXTRA_USER_ID">USER_ID</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="user_banned_time">Вы забанены до</string>
    <string name="user_banned_reason">По причине</string>
    <string name="user_ban_dialog_title">Важно!</string>
    <string name="capture">Создать аватарку</string>
    <string name="picture">Аватарка</string>
    <string name="user_city">Город</string>
    <string name="pick_place">Определить город</string>
    <string name="btn_add_place">Добавить любимое место</string>
    <string name="favorite_place_title">Моё новое любимое место</string>
    <string name="take_picture">Сделать снимок</string>
    <string name="place_title">Название</string>
    <string name="brief_description">Краткое описание</string>
    <string name="city_name">Название города</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="pick_coordinates">Получить координаты</string>
    <string name="btn_save_place">Сохранить</string>
    <string name="place_saved_success">Любимое место сохранено</string>
    <string name="place_save_error">Сохранить не удалось.</string>
    <string name="take_picture_error">Фотография обязательна</string>
    <string name="out_of_city_error">Вы вне города</string>
    <string name="out_of_address_error">Список адресов недоступен</string>
    <string name="out_of_coord_error">Координаты недоступны</string>
    <string name="out_of_network_error">Подключение к интернету отсутствует</string>
    <string name="btn_show_places">Посмотреть любимые места</string>
    <string name="EXTRA_PLACE_ID">PLACE_ID</string>
    <string name="loading_places_error">Ошибка загрузки</string>
    <string name="forecast">Погодные условия</string>
    <string name="temperature">Температура, &#176;C</string>
    <string name="wind">Ветер, м/с</string>
    <string name="clouds">Облачность, %</string>
    <string name="deleted_photo_error">Фотография удалена</string>
</resources>
