<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <!-- Footer Start -->
    <!-- Place footer next to header to set z-index property to minus value -->
    <LinearLayout style="@style/Footer">
    </LinearLayout>
    <!-- Footer Ends -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/form_padding"
        android:layout_marginTop="@dimen/form_layout_marginTop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data_title"
            android:textSize="@dimen/textView_textSize"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:contentDescription="@string/picture"
            android:layout_gravity="center"
            android:layout_margin="@dimen/thumbnail_margin"
            android:background="@drawable/pic_border" />
        <Button
            android:id="@+id/btnCreateThumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/capture" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname"/>
        <EditText android:id="@+id/nickname_edit"
            style="@style/TextField"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>
        <EditText android:id="@+id/first_name_edit"
            style="@style/TextField"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/patronimic"/>
        <EditText android:id="@+id/patronimic_edit"
            style="@style/TextField"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>
        <EditText android:id="@+id/last_name_edit"
            style="@style/TextField"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_city"/>
        <EditText android:id="@+id/user_city_edit"
            style="@style/TextField"/>
        <Button
            android:id="@+id/btnPickPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pick_place" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_phone"/>
        <EditText android:id="@+id/user_phone_edit"
            style="@style/TextField"/>
        <!-- Update button -->
        <Button android:id="@+id/btnUpdateUserData"
            style="@style/RoundedButton"
            android:text="@string/btn_update_user"
            />
        <!-- Exit button -->
        <Button android:id="@+id/btnExitToUserActions"
            style="@style/RoundedButton"
            android:layout_marginBottom="@dimen/button_layout_marginBottom"
            android:text="@string/btn_back_to_menu"
            />
    </LinearLayout>

</RelativeLayout>
</ScrollView>