<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <!-- Footer Start -->
    <!-- Place footer next to header to set z-index property to minus value -->
    <LinearLayout style="@style/Footer">
    </LinearLayout>
    <!-- Footer Ends -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/form_layout_marginStart"
        android:layout_marginEnd="@dimen/form_layout_marginEnd"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/placePhoto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/picture"
            android:layout_gravity="center"
             />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_title"/>
        <TextView
            android:id="@+id/fp_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/brief_description"/>
        <TextView
            android:id="@+id/fp_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"/>
        <TextView
            android:id="@+id/fp_details_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitude"/>
        <TextView
            android:id="@+id/fp_details_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitude"/>
        <TextView
            android:id="@+id/fp_details_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forecast"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature"/>
        <TextView
            android:id="@+id/fp_details_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind"/>
        <TextView
            android:id="@+id/fp_details_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clouds"/>
        <TextView
            android:id="@+id/fp_details_clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            />

    </LinearLayout>

</RelativeLayout>
</ScrollView>