<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <LinearLayout style="@style/Footer">
        </LinearLayout>
        <!-- Footer Ends -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            android:layout_marginTop="@dimen/form_layout_marginTop">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_place_title"
                android:textSize="@dimen/textView_textSize"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <ImageView
                android:id="@+id/photo_thumbnail"
                android:layout_width="@dimen/thumbnail_width"
                android:layout_height="@dimen/thumbnail_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/thumbnail_margin"
                android:background="@drawable/pic_border" />
            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/take_picture" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_title"/>
            <EditText android:id="@+id/title_edit"
                style="@style/TextField"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/brief_description"/>
            <EditText android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength= "199"
                android:inputType="textMultiLine"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_name"/>
            <EditText android:id="@+id/city_name_edit"
                style="@style/TextField"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"/>
            <EditText android:id="@+id/latitude_edit"
                android:inputType="numberSigned"
                style="@style/TextField"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"/>
            <EditText android:id="@+id/longitude_edit"
                android:inputType="numberSigned"
                style="@style/TextField"/>
            <!-- Update button -->
            <Button android:id="@+id/btnSavePlace"
                style="@style/RoundedButton"
                android:text="@string/btn_save_place"
                />
            <!-- Exit button -->
            <Button android:id="@+id/btnExitToActions"
                style="@style/RoundedButton"
                android:layout_marginBottom="@dimen/button_layout_marginBottom"
                android:text="@string/btn_back_to_menu"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>