<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <LinearLayout style="@style/Footer">
        </LinearLayout>
        <!-- Footer Ends -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            android:layout_marginTop="@dimen/form_layout_marginTop">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/form_layout_marginStart"
                android:layout_marginEnd="@dimen/form_layout_marginEnd"
                android:gravity="center"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/banned_time"/>
                <TextView
                    android:id="@+id/banned_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/banned_reason"/>
                <TextView
                    android:id="@+id/banned_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>
            </LinearLayout>
            <!--  Ban Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ban_time"
                android:layout_marginTop="@dimen/form_layout_marginStart"/>
            <EditText android:id="@+id/ban_time"
                style="@style/TextField"
                android:inputType="number"/>
            <!--  Ban reason Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ban_reason"/>
            <EditText android:id="@+id/ban_reason"
                style="@style/TextField"/>
            <!-- Update button -->
            <Button android:id="@+id/btnUpdate"
                style="@style/RoundedButton"
                android:text="@string/btn_update_user"
                />
            <!-- Exit button -->
            <Button android:id="@+id/btnExit"
                style="@style/RoundedButton"
                android:layout_marginBottom="@dimen/button_layout_marginBottom"
                android:text="@string/btn_back_to_menu"
                />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>