<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- Footer Start -->
        <LinearLayout style="@style/Footer">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            android:layout_marginTop="@dimen/form_layout_marginTop">
            <ImageView
                android:id="@+id/picture"
                android:layout_width="@dimen/thumbnail_width"
                android:layout_height="@dimen/thumbnail_height"
                android:contentDescription="@string/picture"
                android:layout_gravity="center"
                android:layout_margin="@dimen/thumbnail_margin"
                android:background="@drawable/pic_border" />
            <Button
                android:id="@+id/capture_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/capture" />
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"/>
            <EditText android:id="@+id/reg_email"
                style="@style/TextField"
                android:inputType="textEmailAddress"/>
            <!--  Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"/>
            <EditText android:id="@+id/reg_password"
                style="@style/TextField"
                android:inputType="textPassword"/>
            <!-- Repeat Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_repeat_password"/>
            <EditText android:id="@+id/repeat_password"
                style="@style/TextField"
                android:inputType="textPassword"/>
            <!-- Register Button -->
            <Button android:id="@+id/btnSubmitRegister"
                style="@style/RoundedButton"
                android:text="@string/btn_to_register"
                />

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>
