<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/form_layout_marginStart"
    android:layout_marginEnd="@dimen/form_layout_marginEnd"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_banned_time"/>
    <TextView
        android:id="@+id/user_banned_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_banned_reason"/>
    <TextView
        android:id="@+id/user_banned_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"/>
    </LinearLayout>