<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <LinearLayout style="@style/Footer">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- LoginActivity Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            android:layout_marginTop="@dimen/form_layout_marginTop">
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"/>
            <EditText android:id="@+id/login_email"
                style="@style/TextField"
                android:inputType="textEmailAddress"/>
            <!--  Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"/>
            <EditText android:id="@+id/login_password"
                style="@style/TextField"
                android:inputType="textPassword"/>
            <!-- LoginActivity button -->
            <Button android:id="@+id/btnLogin"
                style="@style/RoundedButton"
                android:text="@string/btn_login"
                />
            <!-- Register button -->
            <Button android:id="@+id/btnRegister"
                style="@style/RoundedButton"
                android:layout_marginBottom="@dimen/button_layout_marginBottom"
                android:text="@string/btn_register"
                />

        </LinearLayout>
        <!-- LoginActivity Form Ends -->

    </RelativeLayout>
</ScrollView>
