<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <LinearLayout style="@style/Footer">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- LoginActivity Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            android:layout_marginTop="@dimen/footer_layout_height">

            <!-- Ban button -->
            <Button android:id="@+id/btnBan"
                style="@style/RoundedButton"
                android:text="@string/btn_ban"
                />
            <!-- Data button -->
            <Button android:id="@+id/btnData"
                style="@style/RoundedButton"
                android:text="@string/btn_data"
                />
            <!-- Register button -->
            <Button android:id="@+id/btnCancel"
                style="@style/RoundedButton"
                android:layout_marginBottom="@dimen/button_layout_marginBottom"
                android:text="@string/btn_back_to_users"
                />

        </LinearLayout>
        <!-- LoginActivity Form Ends -->

    </RelativeLayout>
</ScrollView>