<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <LinearLayout style="@style/Footer">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- LoginActivity Form -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/form_layout_marginStart"
            android:layout_marginEnd="@dimen/form_layout_marginEnd"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/textView_textSize" />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:textSize="@dimen/textView_textSize" />
            <!-- Data button -->
            <Button android:id="@+id/btnUserData"
                style="@style/RoundedButton"
                android:text="@string/btn_data"
                />
            <Button
                android:id="@+id/btnUserCancel"
                style="@style/RoundedButton"
                android:text="@string/btn_logout"
                />

        </LinearLayout>
        <!-- LoginActivity Form Ends -->

    </RelativeLayout>
</ScrollView>